--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "swr": "^2.3.6"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.14.4",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20.19.23",
     "@types/react": "^19",
