--- a/package.json
+++ b/package.json
@@ -2,33 +2,23 @@
   "name": "ecommerce-store",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.21",
-    "axios": "^1.12.2",
     "next": "14.2.3",
-    "postcss": "^8.5.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "swr": "^2.3.6"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^5.14.4",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20.19.23",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.0",
-    "tailwindcss": "^4.1.16",
-    "typescript": "^5"
-  },
-  "engines": {
-    "node": ">=18 <=20"
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.3"
   }
 }
