--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "ecommerce-store",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,15 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.3",
+    "next": "13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "24.9.2",
+    "@types/react": "19.2.2",
     "autoprefixer": "^10.4.16",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "13.5.6",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.3"
+    "tailwindcss": "^3.3.5"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
