--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
     "@types/node": "24.9.2",
     "@types/react": "19.2.2",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "13.5.6",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "typescript": "5.9.3"
   },
   "engines": {
     "node": "18.x"
