--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "export": "next export"
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.5.6",
+    "next": "14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
