--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "ecommerce-store",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
+ "scripts": {
+  "dev": "next dev",
+  "build": "next build",
+  "export": "next export",
+  "start": "next start"
+},
   "dependencies": {
     "next": "14.2.3",
     "react": "18.2.0",
