--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,6 @@
 [build]
-  command = "npm run build"
+  command = "npm run build && npm run export"
   publish = "out"
 
 [build.environment]
   NODE_VERSION = "18"
-  NODE_ENV = "production"
